# modding

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
mods/base/languages/: en.ron
src/: client.rs  error.rs  lib.rs  main.rs  traits.rs  util.rs
src/models/: base_mod.rs  command.rs  info.rs  language.rs  mod.rs  module.rs  paths.rs
