[package]
name = "modding"
version = "0.1.0"
authors = ["Altagos <altagos@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.2"
walkdir = "2"
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["full"] }

[dependencies.rhai]
version = "0.19.3"
features = ["sync"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
#version = "0.9.0-rc.2"
default-features = false
features = [
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
]
